fix: resolve data races, resource leaks, and metrics issues from review
Fix 15 issues identified by code review:

Data Race Fixes:
- channel_manager.go: move metricsRecorder assignment inside mutex lock
- wallet.go: add RWMutex to protect metricsRecorder concurrent access
- spv.go: add RWMutex for globalMetricsRecorder package-level variable
- libp2p.go: use atomic.Value for metricsRecorder in notifiee callbacks
- rpc_health.go: fix 3 data races by storing error locally before mutex unlock

Resource Leak Fixes:
- channel.go: prevent duplicate goroutines in setMetricsRecorder using sync.Once
- channel.go: fix handler queue metrics to include handler index suffix
- performance.go: add context cancellation for observeSystemMetrics goroutine

Logic and Documentation Fixes:
- start.go: add nil guards for all clientInfoRegistry usages
- signing.go: clarify error metrics recording comment
- performance.go: add overflow bucket for histogram durations >600s
- performance.go: update NewPerformanceMetrics to accept context parameter
- docs/performance-metrics.adoc: add missing coordination and relay entry count metrics

All changes validated with successful build.

--- a/docs/performance-metrics.adoc
+++ b/docs/performance-metrics.adoc
@@ -161,6 +161,11 @@ The client uses three types of metrics:
 *Description*: Average duration of coordination procedures in seconds
 *Labels*: None
 
+==== `performance_coordination_duration_seconds_count`
+*Type*: Counter
+*Description*: Total count of coordination duration samples
+*Labels*: None
+
 === Network Metrics
 
 ==== `performance_incoming_message_queue_size`
@@ -230,6 +235,11 @@ The client uses three types of metrics:
 ==== `performance_relay_entry_duration_seconds`
 *Type*: Gauge (average)
 *Description*: Average duration of relay entry generation in seconds
+*Labels*: None
+
+==== `performance_relay_entry_duration_seconds_count`
+*Type*: Counter
+*Description*: Total count of relay entry duration samples
 *Labels*: None
 
 ==== `performance_relay_entry_timeout_reported_total`
