fix: resolve code quality and test stability issues from review
- Remove unused metricsRecorder field from spvMaintainer struct
- Fix metric type inconsistencies in documentation (Counter→Gauge)
- Add sync.Once guard to RPCHealthChecker.Start() for concurrency safety
- Replace hardcoded metric name strings with defined constants
- Add explanatory comment for timeout metrics accuracy
- Fix flaky TestWatchCoordinationWindows test with proper synchronization

--- a/docs/performance-metrics.adoc
+++ b/docs/performance-metrics.adoc
@@ -162,7 +162,7 @@ The client uses three types of metrics:
 *Labels*: None
 
 ==== `performance_coordination_duration_seconds_count`
-*Type*: Counter
+*Type*: Gauge
 *Description*: Total count of coordination duration samples
 *Labels*: None
 
@@ -238,7 +238,7 @@ The client uses three types of metrics:
 *Labels*: None
 
 ==== `performance_relay_entry_duration_seconds_count`
-*Type*: Counter
+*Type*: Gauge
 *Description*: Total count of relay entry duration samples
 *Labels*: None
 
